--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -36,6 +36,7 @@
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
     "kysely": "^0.27.3",
+    "nest-commander": "^3.14.0",
     "nodemailer": "^6.9.14",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
