--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -16,10 +16,13 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "typeRoots": [
+      "./node_modules/@types", "./types"
+    ]
   },
-  "include": [
-    "src/**/*",
-    "types/**/*"
-  ]
+  // "include": [
+  //   "src/**/*",
+  //   "types/**/*"
+  // ]
 }
