1. Migrations set up properly 2. linting errors fixed

--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": { 
+    "start:dev" : "cd ./packages/api && yarn start:dev"
+  },
   "dependencies": {}
 }
