--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -19,10 +19,13 @@
     "noFallthroughCasesInSwitch": false,
     "typeRoots": [
       "./node_modules/@types", "./types"
-    ]
+    ],
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  // "include": [
-  //   "src/**/*",
-  //   "types/**/*"
-  // ]
+  "include": [
+    "src/**/*",
+    "types/**/*"
+  ]
 }
