--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "geist": "^1.3.1",
     "lucide-react": "^0.441.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
