--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mui/icons-material": "^5.15.10",
+    "@mui/material": "^5.15.10",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -28,29 +32,6 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@tabler/icons-react": "^3.17.0",
     "@tanstack/react-table": "^8.20.5",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "cmdk": "1.0.0",
-    "date-fns": "^4.1.0",
-    "dayjs": "^1.11.13",
-    "geist": "^1.3.1",
-    "lucide-react": "^0.445.0",
-    "next": "14.2.4",
-    "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
-    "react-redux": "^9.1.2",
-    "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
     "@usewaypoint/block-avatar": "^0.0.3",
     "@usewaypoint/block-button": "^0.0.3",
     "@usewaypoint/block-columns-container": "^0.0.3",
@@ -63,9 +44,28 @@
     "@usewaypoint/block-text": "^0.0.6",
     "@usewaypoint/document-core": "^0.0.6",
     "@usewaypoint/email-builder": "^0.0.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
+    "geist": "^1.3.1",
     "highlight.js": "^11.9.0",
-    "zustand": "^4.5.1",
-    "react-colorful": "^5.6.1"
+    "lucide-react": "^0.445.0",
+    "next": "14.2.4",
+    "next-themes": "^0.3.0",
+    "react": "^18",
+    "react-colorful": "^5.6.1",
+    "react-day-picker": "8.10.1",
+    "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
+    "react-redux": "^9.1.2",
+    "recharts": "^2.12.7",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/node": "^20",
