--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -59,6 +59,7 @@
     "react-colorful": "^5.6.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.9",
     "react-hook-form": "^7.53.0",
     "react-redux": "^9.1.2",
     "recharts": "^2.12.7",
@@ -72,6 +73,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-dropzone": "^5.1.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
